downgrade java from 17 to 11